Meta data added

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ng-SriLanka</title>
+  <title>NG-SriLanka | Sri Lanka's First ever Angular Conference</title>
   <base href="/">
+
+  <!-- Open Graph data -->
+  <meta property="og:site_name" content="NG-SriLanka | Sri Lanka's First ever Angular Conference" />
+  <meta property="og:url" content="https://www.ng-srilanka.com/" />
+  <meta property="og:title" content="NG-SriLanka | Sri Lanka's First ever Angular Conference" />
+  <meta property="og:description" content="1 days - 12 talks - 12 speakers - 800+ developers" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="" />
+
+  <!-- Social sharing meta -->
+  <meta name="twitter:site" content="@ngslconf" />
+  <meta name="twitter:url" content="https://www.ng-srilanka.com/" />
+  <meta name="twitter:title" content="NG-SriLanka | Sri Lanka's First ever Angular Conference" />
+  <meta name="twitter:description" content="1 days - 12 talks - 12 speakers - 800+ developers" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
